--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,7 @@
 [submodule "test/test_helper/bats-assert"]
 	path = test/test_helper/bats-assert
 	url = https://github.com/bats-core/bats-assert.git
+
+[submodule "include/pase-cpp"]
+	path = include/pase-cpp
+	url = https://github.com/SeidenGroup/pase-cpp
